--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,9 +2,84 @@
 @tailwind components;
 @tailwind utilities;
 
-.title-font{
-  color: blue;
+*{
+  font-family: 'Times New Roman', Times, serif;
 }
+
 .coffee_type{
   color: black;
+}
+
+
+/* button search */
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.searchTerm {
+  width: 100%;
+  border: 3px solid green;
+  border-right: none;
+  padding: 5px;
+  height: 36px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #9DBFAF;
+}
+
+.searchTerm:focus{
+  color: #00B4CC;
+  background-color: rgb(15, 9, 4);
+}
+
+.searchButton {
+  width: 40px;
+  height: 36px;
+  border: 1px solid green;
+  background: green;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/* style home */
+#home{
+  width: 100%;
+  height: 90vh;
+  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("https://www.nescafe.com/in/sites/default/files/coffee-types-banner-desktop_0.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 80%;
+}
+
+
+#home .content h3{
+  font-size: 50px;
+  color: white;
+}
+
+#home .content p{
+  margin-top: 10px;
+  color: white;
+}
+
+#btn{
+  width: 150px;
+  height: 36px;
+  margin-top: 20px;
+  background: white;
+  border-radius: 5px;
+  font-weight: bold;
+  border: none;
+  transition: 0.5s ease;
+  cursor: pointer;
+}
+
+#btn:hover{
+  background: green;
+  color: white;
 }
